--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "start": "next start",
     "lint": "next lint"
   },
-
   "dependencies": {
     "next": "15.0.1",
+    "next-themes": "^0.4.4",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
